[gd_scene load_steps=4 format=3 uid="uid://cp5jq5v7ufkb2"]

[ext_resource type="Theme" uid="uid://da5sljheev4yg" path="res://themes/default_theme.tres" id="1_yglv7"]
[ext_resource type="Script" path="res://main_menu/main_menu.gd" id="2_yjlx1"]
[ext_resource type="Texture2D" uid="uid://4sojwabyfs2m" path="res://main_menu/mainmenu.jpeg" id="3_d23ui"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_yglv7")
script = ExtResource("2_yjlx1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_d23ui")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "
RMIT's Bizzare Adventure
    
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="buttonVbox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/buttonVbox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../QuitButton")
theme_override_font_sizes/font_size = 40
text = "Start Game"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/buttonVbox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_bottom = NodePath("../StartButton")
focus_next = NodePath("../StartButton")
focus_previous = NodePath("../StartButton")
theme_override_font_sizes/font_size = 40
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/buttonVbox/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/buttonVbox/QuitButton" to="." method="_on_quit_button_pressed"]
